# gimp-focusblur-plugin

./: CMakeLists.txt  INSTALL
libgimp/: stdplugins-intl.h
src/: aaa.h  brush.h  depthmap.h  diffusion.h  fftblur.h  fftblurbuffer.c  fftblurbuffer.h  fftblurproc.c  fftblurproc.h  focusblur.h  focusblurenums.c  focusblurenums.h  focusblurparam.c  focusblurparam.h  focusblurrc.c  focusblurstock.h  focusblurtypes.h  gimpplugin.c  interface.h  pixbufs.h  render.c  render.h  shine.h  source.h
